--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@ I will always keep falling in love with you. Happy Anniversary!</p>
         </div>
     </div>
     
-<audio autoplay src="mp3/love.mp3"></audio>
+<audio controls autoplay class="mp3" src="mp3/love.mp3"></audio>
+
 
 <div class="fotter">
     &#169;2023, All Rights Reserved Shanto
